--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,20 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
+    "name": "guifelix/ulid",
+    "description": "A PHP package to generate Universally Unique Lexicographically Sortable Identifiers",
+    "type": "library",
     "keywords": [
-        ":vendor_name",
-        ":package_slug"
+        "guifelix",
+        "php-ulid",
+        "ulid",
+        "php",
+        "id"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/guifelix/ulid",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "Guilherme Maciel",
+            "email": "12631274+guifelix@users.noreply.github.com",
             "role": "Developer"
         }
     ],
@@ -19,27 +23,39 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
+        "infection/infection": "^0.26.6",
         "pestphp/pest": "^1.20",
+        "pestphp/pest-plugin-parallel": "^1.0",
+        "pestphp/pest-plugin-watch": "1.x-dev",
+        "phpbench/phpbench": "^1.0.0-alpha3",
+        "spatie/pest-plugin-test-time": "^1.0",
         "spatie/ray": "^1.28"
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src"
+            "Guifelix\\Ulid\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests"
+            "Guifelix\\Ulid\\Tests\\": "tests",
+            "Guifelix\\Ulid\\Benchmark\\": "benchmarks"
         }
     },
     "scripts": {
-        "test": "vendor/bin/pest",
-        "test-coverage": "vendor/bin/pest --coverage",
-        "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes"
-    },
-    "config": {
-        "sort-packages": true
+        "test": "XDEBUG_MODE=coverage vendor/bin/pest --coverage",
+        "testw": "vendor/bin/pest --watch",
+        "bench": "vendor/bin/phpbench run benchmarks --report=default",
+        "format": "PHP_CS_FIXER_IGNORE_ENV=1 vendor/bin/php-cs-fixer fix --allow-risky=yes",
+        "sentinel": "XDEBUG_MODE=coverage vendor/bin/infection --test-framework=pest --show-mutations"
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "config": {
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true,
+            "infection/extension-installer": true
+        }
+    }
 }
